--- a/webcalclient/src/main/AndroidManifest.xml
+++ b/webcalclient/src/main/AndroidManifest.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="org.walley.webcalclient2"
-  android:versionCode="32"
-  android:versionName="1.0.25">
+  android:versionCode="33"
+  android:versionName="1.0.26">
+
+  <supports-screens
+    android:resizeable="true"
+    android:smallScreens="true"
+    android:normalScreens="true"
+    android:largeScreens="true"
+    android:xlargeScreens="true"
+    android:anyDensity="true"
+    />
+
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+  <uses-sdk android:minSdkVersion="14"/>
 
   <application 
     android:label="@string/app_name" 
@@ -28,27 +44,12 @@
     <activity android:name="wcc_ecv"/>
     <activity android:name="wcc_webview"/>
 
-  <provider
+<!--  <provider
+    android:exported="false"
     android:name="com.tyczj.extendedcalendarview.CalendarProvider"
     android:authorities="com.tyczj.extendedcalendarview.calendarprovider" 
-  />
+  />-->
 
   </application>
-
-  <supports-screens 
-    android:resizeable="true"
-    android:smallScreens="true"
-    android:normalScreens="true"
-    android:largeScreens="true"
-    android:xlargeScreens="true"
-    android:anyDensity="true"
-  />
-
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-  <uses-sdk android:minSdkVersion="14"/>
 
 </manifest>
