--- a/webcalclient/build.gradle
+++ b/webcalclient/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 17
+    compileSdkVersion 26
     buildToolsVersion '27.0.3'
 
     compileOptions {
@@ -22,6 +22,13 @@ android {
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
             signingConfig signingConfigs.release
         }
+        debug {
+            debuggable true
+            jniDebuggable true
+            signingConfig signingConfigs.release
+            renderscriptDebuggable true
+            minifyEnabled false
+        }
     }
 
     defaultConfig {
@@ -29,8 +36,8 @@ android {
         applicationId "org.walley.webcalclient2"
         minSdkVersion 14
         targetSdkVersion 26
-        versionCode 33
-        versionName "1.0.26"
+        versionCode 34
+        versionName "1.0.27"
     }
 
     lintOptions {
