--- a/webcalclient/build.gradle
+++ b/webcalclient/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+def kpFile = rootProject.file("local.properties")
+def kp = new Properties()
+kp.load(new FileInputStream(kpFile))
+
 android {
     compileSdkVersion 26
     buildToolsVersion '27.0.3'
